# Concurrent-and-Parallel-Systems

./: README.md
Project 1 - Image Sorting/: SET10108 $40615059 CW1.docx
Project 1 - Image Sorting/source/: CMakeLists.txt  ImageCalc.cpp  ImageCalc.h  main.cpp
Project 2 - N Queens Problem/: SET10108 -40618059_cw2.docx
Project 2 - N Queens Problem/N-Queens Problem/: CMakeLists.txt  nqueens-CUDA.cu  nqueens-OpenMP-Final.cpp  nqueens-OpenMP-Vector.cpp  nqueens.cpp
